--- a/src/Components/Header/Page/Register/Register.css
+++ b/src/Components/Header/Page/Register/Register.css
@@ -53,7 +53,6 @@
  .input-box {
      position: relative;
      width: 310px;
-     
      margin: 30px 0;
      border-bottom: 2px solid #fff;
  }
@@ -68,7 +67,16 @@
      pointer-events: none;
      transition: 0.5s;
  }
-
+ .lebel-container{
+    position: absolute;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        font-size: 1em;
+        color: #fff;
+        pointer-events: none;
+        transition: 0.5s;
+ }
 
  .input-box input:focus~label,
  .input-box input:valid~label {
@@ -85,6 +93,7 @@
      color: #fff;
      padding: 0 35px 0 5px;
  }
+
 
  .input-box .icon {
      position: absolute;
